# rustterminal

./: index.html  package-lock.json  package.json  readme.md  ～index.html
src/: config.js  fileManager.css  fileManager.js  style.css  terminal.js
src-tauri/: .gitignore  Cargo.toml  config.ini  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: config.rs  filemanager.rs  main.rs  pty.rs
src-tauri/src/save/: pty2.rs  ~pty.rs
src/save/: ~terminal.js  ～fileManager.js
