[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta" # 如果需要 shell 功能，建议加上

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.38.4"}
#pty = "0.2.2"
portable-pty = "0.8"

config = "0.15.22"

fs = "0.0.5"
[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
